Fixed layout issues

--- a/src/main/webapp/styles/themes/bootstrap/main.scss
+++ b/src/main/webapp/styles/themes/bootstrap/main.scss
@@ -4,6 +4,9 @@
   margin-bottom: 0;
 }
 
+.mrgn-rght-sm{
+  margin-right: 5px;
+}
 .mrgn-bttm-md {
   margin-bottom: 10px;
 }
